feat: add current curriculum and update social-media icons in contact section

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -3,7 +3,7 @@
 <div class="home">
   <div class="home-image">
     <div class="image-container">
-      <img src="/home.png" alt="Jean Gomes" class="profile-image">
+      <img src="/home.png" alt="Jean Gomes" class="profile-image" />
       <div class="image-border"></div>
     </div>
   </div>
@@ -24,17 +24,42 @@
       <a routerLink="/about" class="button" id="about-button">
         <span class="button__text">More About Me</span>
         <span class="button__icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
             <path d="M5 12h14"></path>
             <path d="m12 5 7 7-7 7"></path>
           </svg>
         </span>
       </a>
 
-      <a href="/cv-jean-gomes.pdf" download class="button button--secondary" id="download-button">
+      <a
+        href="assets/pdf/Currículo Atualizado - Jean L Gomes 2025.pdf"
+        download
+        class="button button--secondary"
+        id="download-button"
+      >
         <span class="button__text">Download CV</span>
         <span class="button__icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
             <polyline points="7,10 12,15 17,10"></polyline>
             <line x1="12" y1="15" x2="12" y2="3"></line>
@@ -43,6 +68,4 @@
       </a>
     </div>
   </div>
-
-  
 </div>
