--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -46,9 +46,13 @@
         download
         class="button button--secondary"
         id="download-button"
+        (click)="onDownloadClick()"
       >
-        <span class="button__text">Download CV</span>
-        <span class="button__icon">
+        <span class="button__text">
+          {{ downloadMessage }}
+        </span>
+        <span class="button__icon" *ngIf="!isDownloading">
+          <!-- ícone normal -->
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
@@ -64,6 +68,11 @@
             <polyline points="7,10 12,15 17,10"></polyline>
             <line x1="12" y1="15" x2="12" y2="3"></line>
           </svg>
+        </span>
+
+        <!-- spinner enquanto baixa -->
+        <span *ngIf="isDownloading" class="button__icon">
+          <span class="spinner"></span>
         </span>
       </a>
     </div>
