feat: update curriculum

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -42,7 +42,7 @@
       </a>
 
       <a
-        href="assets/pdf/Currículo Atualizado - Jean L Gomes 2025.pdf"
+        href="assets/pdf/Currículo - Jean Laranjeira Gomes 2025.pdf"
         download
         class="button button--secondary"
         id="download-button"
@@ -70,7 +70,7 @@
           </svg>
         </span>
 
-        <!-- spinner enquanto baixa -->
+        
         <span *ngIf="isDownloading" class="button__icon">
           <span class="spinner"></span>
         </span>
